# restaurant-llm-chat

./: .gitignore  README.md  docker-compose.yml  makefile
backend/: Dockerfile  pyproject.toml
backend/app/: deps.py  logging.py  main.py
backend/app/auth/: jwt.py  routes.py  schemas.py  security.py
backend/app/chat/: graph.py  memory.py  routes.py  schemas.py  tools.py
backend/app/db/: crud.py  models.py
backend/app/menu/: routes.py  schemas.py
backend/app/messaging/: kafka.py
backend/app/observability/: langsmith.py
backend/restaurant_llm_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  api.js  auth.js
frontend/src/components/: ChatWidget.jsx
frontend/src/pages/: Login.jsx  Menu.jsx  Signup.jsx
k8s/: backend.yaml  configmap.yaml  frontend.yaml  ingress.yaml  kafka.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml
